--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,22 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file('debug.keystore')
+            storePassword "android"
+            keyAlias "androidDebugkey"
+            keyPassword "android"
         }
     }
 
@@ -68,4 +83,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // okhhtp3日志拦截器
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
+    //权限
+    implementation 'pub.devrel:easypermissions:1.0.1'
 }
