--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,30 +53,25 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation fileTree(include: ['*.jar'], dir: '../tuikit/libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation "com.android.support:design:28.0.0"
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     //butterknife
     implementation 'com.jakewharton:butterknife:9.0.0-rc2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc2'
-
     //glide
     implementation 'com.github.bumptech.glide:glide:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
-
     //EventBus
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'org.jetbrains:annotations:15.0'
-
     //logger
     implementation 'com.orhanobut:logger:2.2.0'
-
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -86,10 +81,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     // okhhtp3日志拦截器
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-
     //权限
     implementation 'pub.devrel:easypermissions:1.0.1'
-
     //腾讯即时通信
     implementation project(':tuikit')
+    implementation files('libs/MiPush_SDK_Client_3_6_15.jar')
 }
